# FREESTOR

./: README.md  index.html
FREESTOR/: CMakeLists.txt  EBOOT.PBP  FREESTOR — ярлык.lnk  ICON1.pmf  Makefile  PARAM.SFO  README.md  curl_test.prx  download.c  main.c  main.cpp  run_psp.sh  snd0.at3  url.txt
FREESTOR/include/: callbacks.hpp  file_handler.hpp  graphics.hpp  network.hpp  systemctrl_se.h
FREESTOR/src/: callbacks.cpp  download.c  file_handler.cpp  graphics.cpp  main.c  main.cpp  network.cpp
depackager v3 mod/: EBOOT.PBP  Makefile  PARAM — копия.SFO  PARAM.SFO  PSP depackager — ярлык.lnk  README.TXT
depackager v3 mod/PSP/GAME/PSP depackager/: EBOOT.PBP
depackager v3 mod/src/: exports.exp  imports.S  lib.c  lib.h  main.c  sctrl.h
